<resources>
    <string name="app_name">TZLC</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_club_details">displayClubDetails</string>
    <string name="title_activity_add_club_details">Add New Club Details</string>
    <string name="title_activity_display_club_info">TZLC Clubs</string>
    <string name="title_activity_stats_recording">StatsRecording</string>
    <string name="throw_in">Throw-In :</string>
    <string name="dfk">DFK :</string>
    <string name="ifk">IFK :</string>
    <string name="goal_kick">Goal Kick :</string>
    <string name="offside">Offside :</string>
    <string name="late_challange">Late Challange :</string>
    <string name="corner">Corner :</string>
    <string name="tackles">Tackles :</string>
    <string name="possession_change">Possession Change</string>
    <string name="zero">0</string>
    <string name="title_activity_player_info">Players</string>
    <string name="title_activity_sai_seva">Sai Seva</string>
    <string name="title_activity_add_expense_details">Add Expense Details</string>
    <string name="title_activity_edit_expense_details">Edit Expense Details</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="select_date">Date :</string>
    <string name="enter_amount">Amount :</string>
    <string name="select_expense_category">Expense Category :</string>
    <string name="Amo">Enter Amount :</string>
    <string name="title_activity_display_summary_expenses">Monthwise Summary Report</string>
    <string name="title_activity_tzlc_club_add">tzlc_club_add</string>
    <string name="title_activity_tzlc_match_display">TZLC Fixtures</string>
    <string name="title_activity_tzlc_match_add">TZLC Add Match Details</string>
    <string name="title_activity_tzlc_player_display">TZLC Players</string>
    <string name="title_activity_tzlc_player_add">TZLC Add Player Details</string>
    <string name="title_activity_tzlc_match_details">tzlc_match_details</string>
    <string name="title_activity_tzlc_mo_display">tzlc_mo_display</string>
    <string name="title_activity_tzlc_mo_add">TZLC Add MO Details</string>
    <string name="title_activity_tzlc_loan_display">tzlc_loan_display</string>
    <string name="title_activity_tzlc_loan_add">TZLC Add Loan Details</string>
    <string name="title_activity_tzlc_goal_display">tzlc_goal_display</string>
    <string name="title_activity_tzlc_goal_add">Add Goal</string>
    <string name="title_activity_tzlc_card_displayil">Match Cards</string>
    <string name="title_activity_tzlc_card_add">Add Card</string>
    <string name="title_activity_tzlc_stats_add">TZLC Stats Add</string>
    <string name="title_activity_tzlc_highlight_add">Add HighLight</string>
    <string name="title_activity_tzlc_highlight_display">Match Highlights</string>
    <string name="title_activity_tzlc_stats_display">TZLC Match Information</string>
    <string name="title_activity_text_tabs">TextTabs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_tabed">TabedActivity</string>
    <string name="goal">GOAL</string>
    <string name="title_activity_tzlc_club_details">tzlc_club_details</string>
    <string name="title_activity_tabs">Tabs</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="title_activity_tzlc_player_details">tzlc_player_details</string>
    <string name="title_activity_match_tab">matchTab</string>
    <string name="title_activity_tzlc_squad_add">TZLC Add Squad for Match</string>
    <string name="title_activity_tzlc_match_details_tabs">tzlc_match_details_tabs</string>
    <string name="title_activity_tz">tz</string>
    <string name="title_activity_tzlc_sub_add">tzlc_sub_add</string>
    <string name="title_activity_tzlc_sub_display">tzlc_sub_display</string>
    <string name="title_activity_tzlc__reports">Repots</string>
    <string name="title_activity_tzlc__league_table">tzlc_LeagueTable</string>
    <string name="title_activity_tzlc_change_jersey_color">tzlc_change_jersey_color</string>
    <string name="title_activity_tzlc_match_add_passes">Completed Passes</string>
    <string name="title_activity_tzlc_stats_add__tzlc12_n">Record Stats for Match</string>
    <string name="title_activity_tzlc_squad_display">Squad</string>
    <string name="title_activity_tzlc_formation_add">tzlc_formation_add</string>

</resources>
