<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".addExpenseDetails"
    tools:showIn="@layout/activity_add_expense_details">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/select_expense_category" />

    <Spinner
        android:id="@+id/spnCategory"
        android:layout_width="175dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/textView7"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="-18dp"
        android:layout_marginEnd="15dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="96dp"
        android:text="@string/enter_amount" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/textView16"
        android:layout_marginEnd="15dp"
        android:ems="10"
        android:inputType="number"
        android:text="" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView7"
        android:layout_marginTop="186dp"
        android:text="@string/select_date" />

    <EditText
        android:id="@+id/datePicker"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView17"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:focusable="false"
        android:ems="10"
        android:inputType="date" />

    <!--<Button
        android:id="@+id/saveExpenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:text="Save" /> -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="361dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debit" />

        <RadioButton
            android:id="@+id/credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/credit" />
    </RadioGroup>


</RelativeLayout>