<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".StatsRecording"
    tools:showIn="@layout/activity_stats_recording">

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="390dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_blue_bright"
        android:orientation="vertical">

        <Button
            android:id="@+id/home_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_DFK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_IFK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_GK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_OFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_LC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_COR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/home_TCK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="130dp"
        android:layout_height="390dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_green_light"
        android:orientation="vertical">

        <Button
            android:id="@+id/away_TI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_DFK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_IFK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_GK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_OFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_LC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_COR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />

        <Button
            android:id="@+id/away_TCK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="0dp"
        android:background="@android:color/holo_orange_light"
        android:orientation="horizontal"
        android:id="@+id/possessionChangeLayout">

        <Button
            android:id="@+id/possessionChange"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/possession_change" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="118dp"
        android:layout_height="390dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/throw_in" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="69dp"
            android:text="@string/dfk" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="110dp"
            android:text="@string/ifk" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="164dp"
            android:text="@string/goal_kick" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="160dp"
            android:text="@string/offside" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="110dp"
            android:text="@string/late_challange" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="63dp"
            android:text="@string/corner" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="18dp"
            android:text="@string/tackles" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_above="@+id/possessionChangeLayout"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/home_TIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:text="00:00"
            android:textColor="@android:color/holo_blue_bright"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/away_TIME"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="25dp"
            android:text="00:00"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp" />
    </RelativeLayout>

</RelativeLayout>